Project1/Manifest_Files/statefulset.yml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: bankapp-statefulset
spec:
  serviceName: "bankapp-service"
  replicas: 1
  selector:
    matchLabels:
      app: dbbankapp
  template:
    metadata:
      labels:
        app: dbbankapp
    spec:
      containers:
        - name: bankapp-container
          image: sudharsan06122000/bloodyapp:dbimage
          ports:
            - containerPort: 3306
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
          volumeMounts:
            - name: mysql-persistent-storage
              mountPath: /usr/share/nginx/html
  volumeClaimTemplates:
    - metadata:
        name: mysql-persistent-storage
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: "1Gi"
