Project1/Manifest_Files/app.service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: bankapp-service
spec:
  selector:
    app: bankapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
